--- a/data/operators.yml
+++ b/data/operators.yml
@@ -39,3 +39,44 @@ vetted_operators:
     logo: "operators/remove.png"
     logo_link: "https://www.couchbase.com/products/cloud/kubernetes"
     description: "The Couchbase Autonomous Operator for Kubernetes enables cloud portability and automates operational best practices for deploying and managing the Couchbase Data Platform."
+  - title: "Syndesis"
+    link: "https://github.com/syndesisio/syndesis/tree/master/install/operator"
+    logo: "operators/remove.png"
+    logo_link: "https://syndesis.io/"
+    description: "The Syndesis Infrastructure Operator for installing and updating Syndesis."
+  - title: "Tensorflow"
+    link: "https://github.com/kubeflow/tf-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/kubeflow/tf-operator/blob/master/README.md"
+    description: "Operator For TensorFlow jobs"
+  - title: "Apache Spark"
+    link: "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/blob/master/README.md"
+    description: "Kubernetes operator for specifying and managing the lifecycle of Apache Spark applications on Kubernetes."
+  - title: "Pytorch"
+    link: "https://github.com/kubeflow/pytorch-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/kubeflow/pytorch-operator/blob/master/README.md"
+    description: "Operator for PyTorch jobs"
+  - title: "MPI"
+    link: "https://github.com/kubeflow/mpi-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/kubeflow/mpi-operator/blob/master/README.md"
+    description: "The MPI Operator makes it easy to run allreduce-style distributed training."
+  - title: "Chainer"
+    link: "https://github.com/kubeflow/chainer-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/kubeflow/chainer-operator/blob/master/README.md"
+    description: "Operator For Chainer/ChainerMN jobs currently only serves as a proof of concept for running distributed training with Chainer/ChainerMN on Kubernetes."
+  - title: "MXnet"
+    link: "https://github.com/kubeflow/mxnet-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/kubeflow/mpi-operator/blob/master/README.md"
+    description: "An Operator for Apache MXNet jobs"
+  - title: "Caffe2"
+    link: "https://github.com/kubeflow/caffe2-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/kubeflow/caffe2-operatorblob/master/README.md"
+    description: "Operator for Caffe2, a popular machine learning framework (experimental)"
+    
