next 9 community operators
https://github.com/xoe-labs/odoo-operator
https://hub.docker.com/r/redislabs/operator/
https://github.com/planetscale/vitess-operator
https://github.com/CrunchyData/postgres-operator
*https://www.confluent.io/confluent-operator/
https://github.com/strimzi/strimzi-kafka-operator
https://github.com/lightbend/spark-on-k8s-operator
https://github.com/vitessio/vitess-operator

--- a/data/operators.yml
+++ b/data/operators.yml
@@ -79,4 +79,43 @@ vetted_operators:
     logo: "operators/remove.png"
     logo_link: "https://github.com/kubeflow/caffe2-operatorblob/master/README.md"
     description: "Operator for Caffe2, a popular machine learning framework (experimental)"
-    
+  - title: "Xoe Labs Odoo"
+    link: "https://github.com/xoe-labs/odoo-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/xoe-labs/odoo-operator/blob/master/README.md"
+    description: "Odoo Operator (alpha) using Red Hat's operator-framework to run Odoo Instances professionally at scale."
+ - title: "Redis"
+    link: "https://hub.docker.com/r/redislabs/operator/"
+    logo: "operators/remove.png"
+    logo_link: "https://redislabs.com/redis-enterprise-documentation/concepts-architecture/kubernetes/k8s-operator-based-deployments/"
+    description: "The Redis Enterprise Operator is the fastest, most efficient way to deploy and maintain a Redis Enterprise Cluster in Kubernetes."
+ - title: "PlanetScale Vitess"
+    link: "https://github.com/planetscale/vitess-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/planetscale/vitess-operator/blob/master/README.md"
+    description: "The Vitess Operator provides automation that simplifies the administration of Vitess clusters on Kubernetes."
+  - title: "CrunchyData Postgres"
+    link: "https://github.com/CrunchyData/postgres-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/CrunchyData/postgres-operator/blob/develop/README.adoc"
+    description: "The CrunchyData Postgres Operator is a controller that runs within a Kubernetes cluster that provides a means to deploy and manage PostgreSQL clusters."
+ - title: "Confluent Apache Kafka"
+    link: "https://www.confluent.io/confluent-operator/"
+    logo: "operators/remove.png"
+    logo_link: "https://www.confluent.io/confluent-operator/"
+    description: "Confluent Operator automates provisioning, management and operations of the entire Confluent Platform using the Kubernetes Operator API."
+ - title: "Strimzi Kafka"
+    link: "https://github.com/strimzi/strimzi-kafka-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/strimzi/strimzi-kafka-operator/blob/master/README.md"
+    description: "Strimzi provides a way to run an Apache Kafka cluster on Kubernetes or OpenShift in various deployment configurations."
+ - title: "Lightbend Spark"
+    link: "https://github.com/lightbend/spark-on-k8s-operator"
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/lightbend/spark-on-k8s-operator/blob/master/README.md"
+    description: "Kubernetes CRD operator (alpha) for specifying and running Apache Spark applications idiomatically on Kubernetes."
+ - title: "Vitess"
+    link: "https://github.com/vitessio/vitess-operator "
+    logo: "operators/remove.png"
+    logo_link: "https://github.com/vitessio/vitess-operator /blob/master/README.md"
+    description: "Vitess Operator provides automation that simplifies the administration of Vitess clusters on Kubernetes."
