add 3 more operators: Dask, Radanalytics Spark and Tidb
https://github.com/radanalyticsio/spark-operator/blob/master/README.md
https://github.com/pingcap/tidb-operator
https://github.com/jvm-operators/dask-operator/blob/master/README.md
logo: "operators/pingcaptidb.png"
logo: "operators/dask.png"

--- a/data/operators.yml
+++ b/data/operators.yml
@@ -49,7 +49,7 @@ vetted_operators:
   logo: "operators/tensorflow.png"
   logo_link: "https://github.com/kubeflow/tf-operator/blob/master/README.md"
   description: "Operator For TensorFlow jobs"
-- title: "Apache Spark"
+- title: "Apache Spark - GCP"
   link: "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator"
   logo: "operators/apachespark.png"
   logo_link: "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/blob/master/README.md"
@@ -109,3 +109,18 @@ vetted_operators:
   logo: "operators/vitess.png"
   logo_link: "https://github.com/vitessio/vitess-operator /blob/master/README.md"
   description: "Vitess Operator provides automation that simplifies the administration of Vitess clusters on Kubernetes."
+- title: "Dask (alpha)"
+  link: "https://github.com/jvm-operators/dask-operator"
+  logo: "operators/dask.png"
+  logo_link: "https://github.com/jvm-operators/dask-operator/blob/master/README.md"
+  description: "Vitess Operator provides automation that simplifies the administration of Vitess clusters on Kubernetes."
+- title: "Tidb - PingCAP"
+  link: "https://github.com/pingcap/tidb-operator"
+  logo: "operators/pingcaptidb.png"
+  logo_link: "https://github.com/vitessio/vitess-operator /blob/master/README.md"
+  description: "TiDB operator creates and manages TiDB clusters running in Kubernetes."
+- title: "Apache Spark - Radanalytics.io"
+  link: "https://github.com/radanalyticsio/spark-operator"
+  logo: "operators/apachespark.png"
+  logo_link: "https://github.com/radanalyticsio/spark-operator/blob/master/README.md"
+  description: "ConfigMap and CRD based approach for managing the Spark clusters in Kubernetes and OpenShift."  
