WIP: update operators list
* removes caffe2 and lightbend operators
* adds Dask, Radanalytics Spark and Tidb

--- a/data/operators.yml
+++ b/data/operators.yml
@@ -49,7 +49,7 @@ vetted_operators:
   logo: "operators/tensorflow.png"
   logo_link: "https://github.com/kubeflow/tf-operator/blob/master/README.md"
   description: "Operator For TensorFlow jobs"
-- title: "Apache Spark"
+- title: "Apache Spark - GCP"
   link: "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator"
   logo: "operators/apachespark.png"
   logo_link: "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/blob/master/README.md"
@@ -74,11 +74,6 @@ vetted_operators:
   logo: "operators/mxnet.png"
   logo_link: "https://github.com/kubeflow/mpi-operator/blob/master/README.md"
   description: "An Operator for Apache MXNet jobs"
-- title: "Caffe2"
-  link: "https://github.com/kubeflow/caffe2-operator"
-  logo: "operators/caffe2.png"
-  logo_link: "https://github.com/kubeflow/caffe2-operatorblob/master/README.md"
-  description: "Operator for Caffe2, a popular machine learning framework (experimental)"
 - title: "Xoe Labs Odoo"
   link: "https://github.com/xoe-labs/odoo-operator"
   logo: "operators/odoo.png"
@@ -109,13 +104,23 @@ vetted_operators:
   logo: "operators/kafka_strimzi.png"
   logo_link: "https://github.com/strimzi/strimzi-kafka-operator/blob/master/README.md"
   description: "Strimzi provides a way to run an Apache Kafka cluster on Kubernetes or OpenShift in various deployment configurations."
-- title: "Lightbend Spark"
-  link: "https://github.com/lightbend/spark-on-k8s-operator"
-  logo: "operators/lightbend.png"
-  logo_link: "https://github.com/lightbend/spark-on-k8s-operator/blob/master/README.md"
-  description: "Kubernetes CRD operator (alpha) for specifying and running Apache Spark applications idiomatically on Kubernetes."
 - title: "Vitess"
   link: "https://github.com/vitessio/vitess-operator "
   logo: "operators/vitess.png"
   logo_link: "https://github.com/vitessio/vitess-operator /blob/master/README.md"
   description: "Vitess Operator provides automation that simplifies the administration of Vitess clusters on Kubernetes."
+- title: "Dask (alpha)"
+  link: "https://github.com/jvm-operators/dask-operator"
+  logo: "operators/dask.png"
+  logo_link: "https://github.com/jvm-operators/dask-operator/blob/master/README.md"
+  description: "Vitess Operator provides automation that simplifies the administration of Vitess clusters on Kubernetes."
+- title: "Tidb - PingCAP"
+  link: "https://github.com/pingcap/tidb-operator"
+  logo: "operators/pingcaptidb.png"
+  logo_link: "https://github.com/vitessio/vitess-operator /blob/master/README.md"
+  description: "TiDB operator creates and manages TiDB clusters running in Kubernetes."
+- title: "Apache Spark - Radanalytics.io"
+  link: "https://github.com/radanalyticsio/spark-operator"
+  logo: "operators/apachespark.png"
+  logo_link: "https://github.com/radanalyticsio/spark-operator/blob/master/README.md"
+  description: "ConfigMap and CRD based approach for managing the Spark clusters in Kubernetes and OpenShift."  
