sig: replace Operations with AIOps
* Renams the Operations SIG page and updates all references to AIOps
* The blog section displays only AI and AIOps tagged blog posts
* Removes the obsolete briefing video, as well as links to archived
  repos with Zabbix and Puppet scripts
* closes #1109

Requested-by: Diane Mueller-Klingspor
Signed-off-by: Jiri Fiala <jfiala@redhat.com>

--- a/source/.htaccess
+++ b/source/.htaccess
@@ -341,6 +341,7 @@ FileETag None
   RewriteRule ^gathering/videos$ videos.html [R,L]
   RewriteRule ^gathering$ https://meeting-reg.com/redhat/2016/public/openshiftgathering [R=301,L]
   RewriteRule ^quotes.html$ testimonials.html [R=301,L]
+  RewriteRule ^sig/Operations.html$ sig/AIOps.html [R=301,L]
 </IfModule>
 
 
