--- a/data/gatherings.yml
+++ b/data/gatherings.yml
@@ -71,7 +71,7 @@ gatherings:
   time: "8:00 am - 8:00 pm"
   location: "Red Hat Summit San Francisco, California"
   google_maps_URL: >-
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11901783.237823999!2d-130.89998018536667!3d43.25752449035873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807ded297e89%3A0xd9553880aa393c6c!2sMoscone%20Center!5e0!3m2!1sen!2sca!4v1569532691405!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.2437246169225!2d-122.40287868439188!3d37.784327619382296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807ded297e89%3A0xd9553880aa393c6c!2sMoscone%20Center!5e0!3m2!1sen!2scz!4v1581515769487!5m2!1sen!2scz" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   venue: "Moscone Convention and Exhibition Center"
   venue_URL: "http://www.moscone.com/site/do/index"
   venue_address: "747 Howard St, San Francisco, CA USA"
@@ -122,68 +122,120 @@ gatherings:
       session_name: "Networking Lunch"
     - local_time: "1:30 pm"
       session_name: "State of the Operators: Framework, SDKs, Hubs and beyond"
+      track: "OpenShift"
       speakers:
         - id: "rob_szumski"
     - local_time: "2:00 pm"
       session_name: "State of Serverless: Service Mesh, Istio, Kiali and OpenShift"
+      track: "OpenShift"
     - local_time: "2:30 pm"
       session_name: "Coffee Break"
     - local_time: "2:40 pm"
       session_name: "OpenShift 4.X in Production Panel"
+      track: "OpenShift"
     - local_time: "3:10 pm"
       session_name: "Round 2: Production OpenShift Case Studies x 3"
+      track: "OpenShift"
     - local_time: "4:10 pm"
       session_name: "Machine Learning on OpenShift Panel"
+      track: "OpenShift"
     - local_time: "4:40 pm"
       session_name: "The Road Ahead: OpenShift, Kubernetes and Beyond"
+      track: "OpenShift"
       speakers:
         - id: "brian_gracely"
     - local_time: "5:00 pm"
       session_name: "AMA Panel with OpenShift PM and Engineering team members"
+      track: "OpenShift"
       speakers:
         - id: "joe_f"
     - local_time: "5:40 pm"
       session_name: "Closing: The Opinionate Guide to Red Hat Summit"
+      track: "OpenShift"
       speakers:
         - id: "diane"
     - local_time: "1:30 pm"
-      session_name: "OpenStack Track: Welcome to the Commons"
+      session_name: "Welcome to the Commons"
+      track: "OpenStack"
       speakers:
         - id: "rain"     
     - local_time: "1:35 pm"
-      session_name: "OpenStack Track: Keynote Customer Case Study"  
+      session_name: "Keynote Customer Case Study"  
+      track: "OpenStack"
     - local_time: "2:00 pm"
-      session_name: "OpenStack Track: RHOSP New Life Cycle and Road Map"
+      session_name: "RHOSP New Life Cycle and Road Map"
+      track: "OpenStack"
       speakers:
         - id: "sean_cohen"     
     - local_time: "2:40 pm"
-      session_name: "OpenStack Track: OpenShift on OpenStack Case Study"
+      session_name: "OpenShift on OpenStack Case Study"
+      track: "OpenStack"
     - local_time: "3:10 pm"
-      session_name: "OpenStack Track: OpenStack Migration and Upgrades Panel"
+      session_name: "OpenStack Migration and Upgrades Panel"
+      track: "OpenStack"
       speakers:
         - id: "gordon_tillmore"     
     - local_time: "3:30 pm"
-      session_name: "OpenStack Track: OpenShift on OpenStack Case Study"
+      session_name: "OpenShift on OpenStack Case Study"
+      track: "OpenStack"
     - local_time: "3:50 pm"
-      session_name: "OpenStack Track: RDO and Community Updates"
+      session_name: "RDO and Community Updates"
+      track: "OpenStack"
       speakers:
         - id: "rain"     
     - local_time: "4:20 pm"
-      session_name: "OpenStack Track: Telco Stories"
+      session_name: "Telco Stories"
+      track: "OpenStack"
       speakers:
         - id: "august_simonelli"    
     - local_time: "5:00 pm"
-      session_name: "OpenStack Track: OpenShift on OpenStack Case Study"
+      session_name: "OpenShift on OpenStack Case Study"
+      track: "OpenStack"
     - local_time: "5:20 pm"
-      session_name: "OpenStack Track: Edge and NFV/5G Update"
+      session_name: "Edge and NFV/5G Update"
+      track: "OpenStack"
       speakers:
         - id: "sandro_mazziotta"   
     - local_time: "5:50 pm"
-      session_name: "OpenStack Track: An OpenStacker's Guide to Red Hat Summit"
+      session_name: "An OpenStacker's Guide to Red Hat Summit"
+      track: "OpenStack"
       speakers:
         - id: "chuck_dubuque"          
     - local_time: "6:00 pm"
       session_name: "Evening Reception and Networking Event"
+  workshops:
+    - start_time: "1:30 pm"
+      end_time: "6:00 pm"
+      room: "1"
+      title: "Awesomeness techniques for beginners"
+      registration_URL: "https://www.redhat.com/"
+      description: >-
+        Here you can find a descritpion of the workshop, what you can learn, etc.
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus diam, hendrerit eu mattis volutpat, convallis nec quam. Vestibulum eu nisl sit amet metus pharetra tincidunt. Pellentesque ultrices tortor id nibh porta feugiat. Morbi mattis suscipit tellus et ultricies. Donec ut ornare nunc. Pellentesque tempor, enim eu congue venenatis, metus urna maximus ex, nec fermentum neque massa vel dolor. Nam eget gravida ipsum, sit amet pellentesque lacus. Donec gravida maximus felis commodo rutrum.
+      speakers:
+        - id: "august_simonelli"
+    - start_time: "1:00 pm"
+      end_time: "3:00 pm"
+      room: "blue"
+      title: "Mysterious workshop"
+      registration_URL: "https://www.redhat.com/"
+      description: >-
+        This workshop is in the "blue" room. That alone makes it worth attending. Also, we have two speakers leading the workshop.
+      speakers:
+        - id: "diane"
+        - id: "brian_gracely"
+    - start_time: "2:00 pm"
+      end_time: "4:00 pm"
+      room: "conference hall 568"
+      title: "Last workshop of the day"
+      description: >-
+        There is no registration link, nor speakers for this workshop. The room has a slightly longer designation.
+        
+        
+        This would be another paragraph of the workshop description.
+
+        This is a new line only.
 - name: "London 2020"
   menu: "show"
   language: "English"
